--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,16 +1,24 @@
 .cover__overlay{
   width: 100%;
   height: 100%;
+  max-width: 1184px;
+max-height: 740px;
+min-width: 320px;
   background-color:rgba(42, 44, 47, .3);
- 
+  position: relative;
+  flex-direction: column;
+  display: flex;
+   
 }
+ 
+
 
 .cover__overlay:hover{
   
   background-color: rgba(42, 44, 47, .8);
-  
-    
+     
 }
+
 
 
 
