--- a/blocks/cover/__sutitle/cover__sutitle.css
+++ b/blocks/cover/__sutitle/cover__sutitle.css
@@ -1,4 +1,5 @@
 .cover__sutitle{
+  
   font-family: Inter;
 font-style: normal;
 font-weight: normal;
@@ -8,7 +9,7 @@ max-width: 360px;
 text-align: center;
 
 color: rgba(255, 255, 255, 1);
-margin: auto;
+margin: 0 auto 0;
 
 }
 
