--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -4,8 +4,6 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 1.12;
-  
-  
   color: #FFFFFF;
   text-decoration: none;
 }
@@ -18,9 +16,9 @@
 
 
 @media screen and (max-width: 592px) {
-  .footer__links {
+  .footer__link {
     font-size: 24px;
-    line-height: 1;
+    line-height: 24px;
    
     
 }  
