--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,8 @@
 .footer{
-  max-width: calc(100% - 96px);
+  min-width: 320px;
+  max-width: 1280px;
   margin: 0 auto 0;
-  padding: 0 0 24px;
+  padding: 0 48px 24px 48px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,14 +10,15 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    max-width: calc(100% - 48px);
+    padding: 0 24px 24px 24px;
   }  
 }
 
 @media screen and (max-width: 592px) {
   .footer {
     flex-direction: column;
-    margin: 0 0 0 16px;
+    
+    padding: 0 0 23px 12px;;
     
 }  
 }
