--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,10 +3,20 @@
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 1.62;
+  line-height: 26px;
+/* Относительная величина в макете фигма противоречит в разных местах 
+https://prnt.sc/uawks4 https://prnt.sc/uawl2c - поэтому задаю в пикселях*/
   color: #FFFFFF;
   text-align: start;
   max-width: 690px;
   margin: 40px 0 32px 0;
+}
+
+
+@media screen and (max-width: 320px) {
+  .lead__caption{
+    margin: 8px 0 0 16px;
+    
+  }  
 }
 
