--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,14 +7,28 @@ line-height: 1.4;
 letter-spacing: 0.15em;
 text-transform: uppercase;
 color: #FFFFFF;
-margin: 8px auto 0;
+margin: 8px 0 0 0;
 max-width: 984px;
 text-align: start;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__caption{
-    margin: 8px 0 0 48px;
+    margin: 8px 0 0 0;
+    
+  }  
+}
+
+@media screen and (max-width: 990px) {
+  .lead__caption{
+    margin: 8px 0 0 24px;
+    
+  }  
+}
+
+@media screen and (max-width: 320px) {
+  .lead__caption{
+    margin: 8px 0 0 16px;
     
   }  
 }
