--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,19 +1,14 @@
 .lead__image{
-max-width: 984px;
+max-width: 100%;
 max-height: 615px;
 display: block;
 margin: 0 auto 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 320px) {
   .lead__image{
-    max-width: 928px;
-  }  
-}
-
-@media screen and (max-width: 928px) {
-  .lead__image{
-    max-width: 100%;
-    contain: content;
+    min-height: 200px;
+    contain: contain;
+    
   }  
 }
