--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,8 +1,7 @@
 .page {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', ‘Arial’, sans-serif;
   background-color: #2A2C2F;
-  max-width: 1280px;
-min-width: 320px;
+  min-width: 320px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
