--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,18 +1,20 @@
 .photo-grid__item{
+  width: 100%;
+  object-fit: cover;
   min-width: 284px;
-  overflow: hidden;
-  min-height: 213px;
-  }
+}
 
+
+  
 @media screen and (max-width: 1280px) {
   .photo-grid__item {
     height: 225px;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .photo-grid__item {
-    min-height: 225px;
+    height: 264px;
   }
 }
   @media screen and (max-width: 320px) {
