--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -6,6 +6,14 @@ grid-row-end: 4;
 margin: 0 40px 0 0;
 }
 
+@media screen and (max-width: 1024px) {
+  .place__image {
+    width: 440px;
+    height: 440px; 
+    
+}  
+}
+
 @media screen and (max-width: 768px) {
   .place__image {
     width: 340px;
@@ -23,7 +31,7 @@ margin: 0 40px 0 0;
 }  
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 380px) {
   .place__image {
     width: 100%;
     contain: auto;
