--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,6 +7,9 @@ line-height: 1.67;
 text-align: start;
 color: #FFFFFF;
 margin: 0 0 24px 0;
+white-space: wrap;
+max-width: 100%;
+
 }
 
 .place__paragraph:last-of-type{
@@ -21,7 +24,7 @@ margin: 0 0 24px 0;
 }  
 }
 
-@media screen and (max-width: 592px) {
+@media screen and (max-width: 625px) {
   .place__paragraph {
     margin: 32px 16px 24px 16px;
   } 
