--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -20,3 +20,10 @@ line-height: 1.1;
     margin: 0 16px 32px 16px;
 }  
 }
+
+@media screen and (max-width: 320px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 1.09;
+}  
+}
