--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -11,12 +11,21 @@
 
 @media screen and (max-width: 768px) {
   .places {
-    max-width: calc(100% - (100%*(0.0625)));
+    max-width: 100%;
+    padding: 0 24px 0 24px;
   }  
 }
 
 @media screen and (max-width: 592px) {
   .places {
     max-width: 100%;
+    padding: 0 24px 0 24px;
+}  
+}
+
+@media screen and (max-width: 368px) {
+  .places {
+   
+    padding: 0 ;
 }  
 }
