--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,38 +1,21 @@
 .cover__title{
-margin: 245px auto 32px;
-font-family: Inter;
-font-style: normal;
+margin: 0 auto 32px;
 font-weight: 900;
 font-size: 72px;
 line-height: 1.06;
 text-align: center;
 color: rgba(255, 255, 255, 1);
 max-width: 560px;
-z-index: 5;
+justify-self: center;
 
 }
 
-@media screen and (max-width: 1024px) {
-  .cover__title {
-   
-    margin: 195px auto 32px;
-
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__title {
-   
-    margin: 195px auto 32px;
-
-  }
-}
 
 @media screen and (max-width: 624px) {
   .cover__title {
     font-size: 32px;
     line-height: 1.09;
-    margin: 115px auto 32px;
+    
 
   }
 }
@@ -40,7 +23,7 @@ z-index: 5;
 @media screen and (max-width: 320px) {
   .cover__title {
    
-    margin: 33px auto 16px;
+    margin-bottom: 16px;
 
   }
 }
