--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,31 +1,69 @@
 .cover{
   max-width: 1184px;
-  height: 740px;
-  margin: 12px auto 92px;
+  min-height: 740px;
+  margin: 92px auto 92px;
   background-image: url(../../images/cover-trains.jpg);
   background-size: 1184px 740px;
   overflow: hidden;
   background-position: center;
   box-sizing: content-box;
-}  
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  }  
+
+  .cover::before {
+    content: '';
+    position: absolute;
+   height: 100%;
+width: 100%;
+    background-color:#2A2C2F;
+    opacity: 0.3;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+
+
+
+    transition: opacity 0.3s;
+    
+  }
+
+  .cover:hover::before{
+  
+    background-color: #2A2C2F;
+    opacity: 0.8;
+    z-index: 1;   
+  }
 
 @media screen and (max-width: 1024px) {
   .cover {
-    width: 100%;
-    height: 640px;
+    width: calc(100% + 48px *2);
+    max-height: 640px;
+    left: -48px;
+    margin: 92px 0 92px 0;
+
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover {
-    
-    height: 480px;
+    margin: 88px 0 88px 0;
+    max-height: 480px;
+    width: calc(100% + 24px *2);
+    left: -24px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 623px) {
   .cover {
-    margin: -8px auto 64px;
-    height: 200px;
+    width: calc(100% + 16px *2);
+    margin: 16px 0 64px 0;
+    min-height: 200px;
+    left: -16px;
   }
 }
