--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,24 +1,19 @@
 .footer{
-  min-width: 320px;
-  max-width: 1280px;
+  width: 100%;
+  
   margin: 0 auto 0;
-  padding: 0 48px 24px 48px;
+  padding: 0 0 24px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
-
-@media screen and (max-width: 768px) {
-  .footer {
-    padding: 0 24px 24px 24px;
-  }  
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 592px) {
   .footer {
     flex-direction: column;
     
-    padding: 0 0 23px 12px;;
+    padding: 0 0 24px 0;;
     
 }  
 }
