--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,8 @@
 
 .header{
-max-width: calc(100% - 96px);
+max-width: 100%;
 max-height: 52px;
-margin: 0 auto 0;
+margin: 0 auto 56px;
 padding-top: 28px;
 display: flex;
 flex-direction: row;
@@ -10,14 +10,9 @@ justify-content: space-between;
 align-items: center;
 }
 
-  @media screen and (max-width: 768px) {
-    .header {
-      max-width: calc(100% - 48px);
-    }  
-  }
-
-  @media screen and (max-width: 320px) {
-    .header {
-      max-width: calc(100% - 32px);
-    }  
-  }
+@media screen and (max-width: 1024px) {
+  .header {
+    margin: 0 auto 48px;
+    
+}  
+}
