--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,34 +1,11 @@
 .lead__caption{
-  font-family: Inter;
-font-style: normal;
 font-weight: normal;
 font-size: 10px;
 line-height: 1.4;
 letter-spacing: 0.15em;
 text-transform: uppercase;
 color: #FFFFFF;
-margin: 8px 0 0 0;
+margin-top: 8px;
 max-width: 984px;
 text-align: start;
-}
-
-@media screen and (max-width: 1024px) {
-  .lead__caption{
-    margin: 8px 0 0 0;
-    
-  }  
-}
-
-@media screen and (max-width: 990px) {
-  .lead__caption{
-    margin: 8px 0 0 24px;
-    
-  }  
-}
-
-@media screen and (max-width: 320px) {
-  .lead__caption{
-    margin: 8px 0 0 16px;
-    
-  }  
 }
