--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,14 +1,25 @@
 .lead__image{
-max-width: 100%;
+object-fit: contain;
+width: 100%;
 max-height: 615px;
 display: block;
 margin: 0 auto 0;
 }
 
+@media screen and (max-width: 768px) {
+  .lead__image{
+    width: calc(100% + 24px *2);
+    position: relative;
+    left: -24px;
+    
+  }  
+}
+
 @media screen and (max-width: 320px) {
   .lead__image{
     min-height: 200px;
-    contain: contain;
-    
+    width: calc(100% + 16px *2);
+    position: relative;
+    left: -16px;
   }  
 }
