--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,18 +1,30 @@
 .page {
+  margin: auto;
+  width: 100%;
+  padding: 0 48px 0 48px;
+  box-sizing: border-box;
   font-family: 'Inter', ‘Arial’, sans-serif;
-  background-color: #2A2C2F;
-  min-width: 320px;
+  
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
 -ms-text-size-adjust: 100%;
 -moz-text-size-adjust: 100%;
   text-rendering:optimizeLegibility;
-  margin: 0;
-  padding: 0;
-  
   }
 
- /* div, ul, section, header, li, img, footer {
+  @media screen and (max-width: 768px) {
+    .page {
+      padding: 0 24px 0 24px;
+    }
+  }
+
+  @media screen and (max-width: 320px) {
+    .page {
+      padding: 0 16px 0 16px;
+    }
+  }
+
+ /* div, ul, section, header, li, img, footer, body, main {
     border: 1px solid red;
-  }  */
+  }    */
