--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,26 +1,27 @@
 .photo-grid__item{
   width: 100%;
-  object-fit: cover;
   min-width: 284px;
+  object-fit: cover;
 }
 
 
   
 @media screen and (max-width: 1280px) {
   .photo-grid__item {
-    height: 225px;
+    max-height: 225px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid__item {
-    height: 264px;
+    max-height: 264px;
   }
 }
+
   @media screen and (max-width: 320px) {
     .photo-grid__item {
       width: 288px;
-height: 216px;
+      height: 216px;
     }
 
   }
