--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,4 @@
 .photo-grid{
-  max-width: calc(100% - 96px);
   margin: 0 auto 92px;
   display: grid;
   grid-template-columns: repeat( auto-fill, minmax(284px, 1fr));
@@ -10,23 +9,19 @@
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    
     gap: 14px;
   }
 }  
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    gap: 16px;
-    max-width: calc(100% - 48px);
-        
+    margin: 0 auto 88px;
+    gap: 16px;   
   }
 }  
 
 @media screen and (max-width: 394px) {
   .photo-grid {
-    
-    max-width: calc(100% - 32px);
     gap: 12px;
     
     margin: 0 auto 64px; 
